--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Bonjour, je suis Térence Lopez</h1>
-				<p>Ceci est ma première page github<a href="/about">Emotion...</a></p>
+				<p>Ceci est ma première page github. <a href="/about">Emotion...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
