--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     		<div class="blurb">
         		<h1>Bonjour, je suis Térence Lopez</h1>
 				<p>Ceci est ma première page github. <a href="/about">Emotion...</a></p>
+				<img src="hell.jpg"/>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
